# Data-oriented-design

./: .gitignore  CLAUDE.md  CLEANER.MD  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COPY.MD  LLM-CONFIG.MD  README.md  text_transfer.txt
.github/: copilot-instructions.md
.zed/: instructions.md
cmake/: include_compile.cmake  include_external.cmake
documentation/: imperative-vs-declarative.md  review-code.md
documentation/hungarian/: boost-webserver-hungarian.h  boost-webserver-original.cpp
enc_temp_folder/b42230298c78bbc57d3ad75f5376e62/: ENDPOINTS.MD
howto/: CMakeLists.txt
howto/gd/: HOWTO_arguments.cpp
html/: buttontestkevin.html  http-server-test01.html  http-test-commands.html  test_table.html  variables-blue-fog.css  variables-clay-sea.css  variables-green-food.css
html/component/: TableSimple.js  UIDialogSimple.js  UIKevinDiv.js  UIToaster.js
html/js/: gd_table_column.js  old-table.js  sample-table.js  table-data.js
misc/configuration/: terminal-color.MD
misc/documentation/: cleaner-check-code.md  imperative-vs-declarative.md  review-code.md
misc/documentation/hungarian/: boost-webserver-hungarian.cpp
misc/documentation/tools/: docker.md  git.md  kubernetes.md
misc/documentation/tools/docker/: cpp  docker-alpine-gcc13.ps1  docker-compose.md  docker-cpp.cpp
misc/documentation/tools/docker/python/: docker-mariadb.py  docker-sqlserver.py
misc/howto/: main.cpp
misc/howto/gd/: HOWTO_strings.cpp  HOWTO_table.cpp
misc/html/: _ai_.js  buttontestkevin.html  http-server-test01.html  http-server-test02.html  variables-blue-fog.css  variables-candy-light.css  variables-green.css  variables-grey.css  variables-red-black.css  variables-soft-candy.css  variables-test.css
misc/html/component/: TableSimple.js  UIDialogSimple.js  UIToaster.js
misc/html/js/: gd_table_table.js  old-table.js  sample-table.js  table-data.js
misc/install/kubernetes/cleaner/: Dockerfile  README.md  cleaner  deployment.yaml  docker-compose.yml  github-load.sh  nginx.conf  run-cleaner.sh
resource/: cleaner-statements.xml  http-configuration.xml  page_user_edit.html  vote-statements.xml
resource/snippets/: class_ask_name.snippet  class_divider.snippet  func_name.snippet  struct_ask_name.snippet  struct_simple.snippet
source/application/: ApplicationBasic.cpp  ApplicationBasic.h
source/application/database/: Metadata_Statements.cpp  Metadata_Statements.h
source/tool/: Tool_SSHClient.h
temp__/: index.html
test/: CMakeLists.txt  TEST_GD.cpp  cleaner-settings.xml
